data/derived/comb/progs/unify/prog0554.ml.out
Characters 61-97:
  assemble (n+1) (n, string_of_int(n)) :: l
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
